--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* DESIGN SYSTEM: Blue-White Tone */
             --bg-gradient: linear-gradient(160deg, #d6eeff 0%, #ffffff 50%, #f0f7ff 100%);
             --primary-blue: #5ca9ff;
-            --accent-purple: #c9a8e8;
             --text-color: #3a5c8a;
             --glass-bg: rgba(255, 255, 255, 0.74);
             --glass-border: rgba(180, 220, 255, 0.45);
@@ -18,7 +16,7 @@
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Mitr', sans-serif; }
-
+        
         body {
             background: var(--bg-gradient);
             background-attachment: fixed;
@@ -33,12 +31,11 @@
         .sparkle { position: absolute; animation: float 6s infinite ease-in-out; opacity: 0.7; font-size: 1.2rem; }
         @keyframes float {
             0%, 100% { transform: translateY(0) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(15deg); }
+            50% { transform: translateY(-25px) rotate(15deg); }
         }
 
         .container { max-width: 800px; margin: 0 auto; position: relative; z-index: 1; }
 
-        /* Card System */
         .card {
             background: var(--glass-bg);
             backdrop-filter: blur(12px);
@@ -56,12 +53,10 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* 1. Header (No Logo per brief) */
         header { text-align: center; }
         .shop-name { font-size: 2.5rem; font-weight: 600; color: var(--primary-blue); margin-bottom: 5px; }
         .shop-desc { font-size: 1.1rem; opacity: 0.8; font-weight: 300; }
 
-        /* 2. Status */
         .status-badge {
             display: inline-flex;
             align-items: center;
@@ -73,69 +68,43 @@
             border: 1px solid var(--glass-border);
             font-size: 0.9rem;
         }
-        .dot {
-            height: 10px;
-            width: 10px;
-            background-color: #2ecc71;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 10px;
-            animation: blink 1.5s infinite;
-        }
+        .dot { height: 10px; width: 10px; background-color: #2ecc71; border-radius: 50%; margin-right: 10px; animation: blink 1.5s infinite; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
 
-        /* 5. Images Section */
-        h2 { font-size: 1.4rem; margin-bottom: 20px; color: var(--primary-blue); font-weight: 500; }
-        .img-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-        .img-grid img { 
-            width: 100%; 
-            border-radius: 18px; 
-            border: 1px solid var(--glass-border);
-            transition: 0.3s;
-        }
-        .img-grid img:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        h2 { font-size: 1.3rem; margin-bottom: 20px; color: var(--primary-blue); display: flex; align-items: center; gap: 10px; }
+        .badge { background: var(--btn-gradient); color: white; padding: 2px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: 400; }
 
-        /* 10. CTA Button */
+        .img-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 15px; }
+        .img-grid img { width: 100%; border-radius: 15px; border: 1px solid var(--glass-border); cursor: pointer; transition: 0.3s; }
+        .img-grid img:hover { transform: scale(1.02); }
+
+        ul { list-style: none; }
+        li { margin-bottom: 10px; position: relative; padding-left: 20px; }
+        li::before { content: '•'; position: absolute; left: 0; color: var(--primary-blue); }
+
         .cta-btn {
-            display: block;
-            width: fit-content;
-            min-width: 250px;
-            margin: 40px auto 20px;
-            padding: 15px 40px;
-            background: var(--btn-gradient);
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: 600;
-            font-size: 1.1rem;
-            box-shadow: 0 4px 15px rgba(133, 193, 255, 0.4);
-            animation: glow 2s infinite;
-            transition: 0.3s;
+            display: block; width: fit-content; min-width: 260px; margin: 40px auto 20px;
+            padding: 15px 40px; background: var(--btn-gradient); color: white;
+            text-align: center; text-decoration: none; border-radius: 50px;
+            font-weight: 600; animation: glow 2s infinite; transition: 0.3s;
         }
-        @keyframes glow {
-            0%, 100% { box-shadow: 0 0 5px rgba(133, 193, 255, 0.4); }
-            50% { box-shadow: 0 0 20px rgba(133, 193, 255, 0.7); }
-        }
+        @keyframes glow { 0%, 100% { box-shadow: 0 0 5px rgba(133, 193, 255, 0.4); } 50% { box-shadow: 0 0 20px rgba(133, 193, 255, 0.7); } }
         .cta-btn:hover { transform: scale(1.05); }
 
-        footer { text-align: center; font-size: 0.85rem; opacity: 0.6; padding: 20px 0 40px; }
+        footer { text-align: center; font-size: 0.85rem; opacity: 0.6; padding-bottom: 40px; line-height: 1.6; }
 
-        @media (max-width: 600px) {
-            .img-grid { grid-template-columns: 1fr; }
-            .shop-name { font-size: 2rem; }
-        }
+        @media (max-width: 600px) { .img-grid { grid-template-columns: 1fr; } }
     </style>
 </head>
 <body>
 
     <div class="sparkles">
-        <div class="sparkle" style="top: 10%; left: 10%;">✦</div>
-        <div class="sparkle" style="top: 25%; left: 85%;">🐦</div>
+        <div class="sparkle" style="top: 10%; left: 8%;">✦</div>
+        <div class="sparkle" style="top: 25%; left: 88%;">🐦</div>
         <div class="sparkle" style="top: 50%; left: 5%;">✿</div>
-        <div class="sparkle" style="top: 75%; left: 80%;">👶🏻</div>
-        <div class="sparkle" style="top: 85%; left: 20%;">⋆</div>
-        <div class="sparkle" style="top: 40%; left: 90%;">🧵</div>
+        <div class="sparkle" style="top: 75%; left: 82%;">👶🏻</div>
+        <div class="sparkle" style="top: 88%; left: 15%;">⋆</div>
+        <div class="sparkle" style="top: 40%; left: 92%;">🧵</div>
     </div>
 
     <div class="container">
@@ -143,23 +112,38 @@
             <h1 class="shop-name">Lula (chxb.Lu)</h1>
             <p class="shop-desc">รับออกแบบลายน้ำ</p>
             <div class="status-badge">
-                <span class="dot"></span> สถานะการรับงาน : Open
+                <span class="dot"></span> สถานะ : เปิดรับงาน (Open)
             </div>
         </header>
 
         <section class="card">
-            <h2>📋 รายละเอียดการบรีฟงาน</h2>
+            <h2><span class="badge">INFO</span> รายละเอียดการบรีฟงาน</h2>
             <div class="img-grid">
-                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAA...[รูป CMS ที่คุณส่งมา]..." alt="CMS Briefing Details">
-                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAA...[รูป YCH ที่คุณส่งมา]..." alt="YCH Briefing Details">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAYAAAB91L6VAAAACXBIWXMAAAsTAAALEwEAmpwYAAAgAElEQVR4nOydd3hURffHv/fubm..." alt="CMS Details">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAYAAAB91L6VAAAACXBIWXMAAAsTAAALEwEAmpwYAAAgAElEQVR4nOydd3hURffHv/fubm..." alt="YCH Details">
             </div>
+            <ul style="margin-top: 20px;">
+                <li><strong>CMS:</strong> ออกแบบ 'โอมากาเสะ' บรีฟของตกแต่งหรือแนวที่อยากให้วาดได้ (ถนัดแนวน่ารัก)</li>
+                <li><strong>YCH (V.1-8):</strong> แจ้งเวอร์ชันที่สนใจ กรณีเพิ่มของตกแต่งนอกเหนือจากแบบ +5 ฿ / ชิ้น</li>
+                <li><strong>รายละเอียดทั่วไป:</strong> ใส่ชื่อได้ทั้งไทย/อังกฤษ แจ้งการจัดวางตัวเล็ก-ใหญ่ได้</li>
+                <li><strong>โทนสี:</strong> สามารถแนบเรฟสีได้ หรือแจ้งการลงสี (ไล่สี / ระบายแยกสี)</li>
+            </ul>
         </section>
 
-        <a href="https://www.facebook.com" class="cta-btn">ติดต่อสั่งงานที่นี่ 🧵</a>
+        <section class="card">
+            <h2><span class="badge">POLICY</span> เงื่อนไขบริการ</h2>
+            <ul>
+                <li>ระยะเวลาในการทำงาน 1-2 วัน/งาน</li>
+                <li>ลิขสิทธิ์งานเป็นของ Lula Shop ห้ามนำไปแอบอ้างหรือดัดแปลง</li>
+                <li>ผลงานทุกชิ้นมีเจ้าของ ขอบคุณที่สนับสนุนค่ะ</li>
+            </ul>
+        </section>
+
+        <a href="#" class="cta-btn">สั่งงาน / สอบถามที่นี่ 🧵</a>
         
         <footer>
-            <p>© 2024 Lula Shop • All work has an owner.</p>
-            <p>Wishing you happiness forever ✿</p>
+            <p>This is the work of Lula Shop. Do not claim or steal the work.</p>
+            <p>Wishing you happiness forever. ✿</p>
         </footer>
     </div>
 
