--- a/index.html
+++ b/index.html
@@ -1,151 +1,147 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lula (chxb.Lu) - Commission Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --bg-gradient: linear-gradient(160deg, #d6eeff 0%, #ffffff 50%, #f0f7ff 100%);
-            --primary-blue: #5ca9ff;
-            --text-color: #3a5c8a;
-            --glass-bg: rgba(255, 255, 255, 0.74);
-            --glass-border: rgba(180, 220, 255, 0.45);
-            --btn-gradient: linear-gradient(135deg, #85c1ff, #c97ae8);
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lula (chxb.Lu) | Commission</title>
 
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Mitr', sans-serif; }
-        
-        body {
-            background: var(--bg-gradient);
-            background-attachment: fixed;
-            color: var(--text-color);
-            min-height: 100vh;
-            padding: 20px;
-            overflow-x: hidden;
-        }
+<link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-        /* Sparkle float animation */
-        .sparkles { position: fixed; width: 100%; height: 100%; top: 0; left: 0; pointer-events: none; z-index: 0; }
-        .sparkle { position: absolute; animation: float 6s infinite ease-in-out; opacity: 0.7; font-size: 1.2rem; }
-        @keyframes float {
-            0%, 100% { transform: translateY(0) rotate(0deg); }
-            50% { transform: translateY(-25px) rotate(15deg); }
-        }
+<style>
+:root{
+  --blue1:#eaf6ff;
+  --blue2:#cfe9ff;
+  --blue3:#9fd3ff;
+  --blue4:#5bb8ff;
+  --white:#ffffff;
+  --glass:rgba(255,255,255,0.6);
+}
 
-        .container { max-width: 800px; margin: 0 auto; position: relative; z-index: 1; }
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Mitr',sans-serif;
+}
 
-        .card {
-            background: var(--glass-bg);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1px solid var(--glass-border);
-            border-radius: 22px;
-            padding: 30px;
-            margin-bottom: 25px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.05);
-            animation: fadeUp 0.8s ease-out forwards;
-        }
+body{
+  background:linear-gradient(135deg,var(--blue1),var(--blue2));
+  min-height:100vh;
+  padding:30px 15px;
+  color:#1a2b3c;
+}
 
-        @keyframes fadeUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+.container{
+  max-width:900px;
+  margin:auto;
+}
 
-        header { text-align: center; }
-        .shop-name { font-size: 2.5rem; font-weight: 600; color: var(--primary-blue); margin-bottom: 5px; }
-        .shop-desc { font-size: 1.1rem; opacity: 0.8; font-weight: 300; }
+.card{
+  background:var(--glass);
+  backdrop-filter:blur(14px);
+  border-radius:22px;
+  padding:28px;
+  margin-bottom:22px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.08);
+}
 
-        .status-badge {
-            display: inline-flex;
-            align-items: center;
-            background: white;
-            padding: 8px 20px;
-            border-radius: 50px;
-            font-weight: 500;
-            margin-top: 15px;
-            border: 1px solid var(--glass-border);
-            font-size: 0.9rem;
-        }
-        .dot { height: 10px; width: 10px; background-color: #2ecc71; border-radius: 50%; margin-right: 10px; animation: blink 1.5s infinite; }
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
+.header{
+  text-align:center;
+}
 
-        h2 { font-size: 1.3rem; margin-bottom: 20px; color: var(--primary-blue); display: flex; align-items: center; gap: 10px; }
-        .badge { background: var(--btn-gradient); color: white; padding: 2px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: 400; }
+.shop-name{
+  font-size:36px;
+  font-weight:600;
+  color:#1b4d7a;
+}
 
-        .img-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 15px; }
-        .img-grid img { width: 100%; border-radius: 15px; border: 1px solid var(--glass-border); cursor: pointer; transition: 0.3s; }
-        .img-grid img:hover { transform: scale(1.02); }
+.subtitle{
+  font-size:18px;
+  color:#3b6f94;
+  margin-top:6px;
+}
 
-        ul { list-style: none; }
-        li { margin-bottom: 10px; position: relative; padding-left: 20px; }
-        li::before { content: '•'; position: absolute; left: 0; color: var(--primary-blue); }
+.desc{
+  margin-top:12px;
+  font-size:16px;
+  color:#355b78;
+}
 
-        .cta-btn {
-            display: block; width: fit-content; min-width: 260px; margin: 40px auto 20px;
-            padding: 15px 40px; background: var(--btn-gradient); color: white;
-            text-align: center; text-decoration: none; border-radius: 50px;
-            font-weight: 600; animation: glow 2s infinite; transition: 0.3s;
-        }
-        @keyframes glow { 0%, 100% { box-shadow: 0 0 5px rgba(133, 193, 255, 0.4); } 50% { box-shadow: 0 0 20px rgba(133, 193, 255, 0.7); } }
-        .cta-btn:hover { transform: scale(1.05); }
+.section-title{
+  font-size:20px;
+  margin-bottom:14px;
+  font-weight:500;
+  color:#1b4d7a;
+}
 
-        footer { text-align: center; font-size: 0.85rem; opacity: 0.6; padding-bottom: 40px; line-height: 1.6; }
+.step-box{
+  background:rgba(255,255,255,0.75);
+  padding:16px;
+  border-radius:16px;
+  margin-bottom:12px;
+}
 
-        @media (max-width: 600px) { .img-grid { grid-template-columns: 1fr; } }
-    </style>
+.image-box img{
+  width:100%;
+  border-radius:16px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.08);
+  margin-bottom:14px;
+}
+
+.footer{
+  text-align:center;
+  font-size:14px;
+  color:#4d6d85;
+  padding-top:10px;
+}
+
+@media(max-width:600px){
+  .shop-name{font-size:28px;}
+  .card{padding:20px;}
+}
+</style>
 </head>
+
 <body>
 
-    <div class="sparkles">
-        <div class="sparkle" style="top: 10%; left: 8%;">✦</div>
-        <div class="sparkle" style="top: 25%; left: 88%;">🐦</div>
-        <div class="sparkle" style="top: 50%; left: 5%;">✿</div>
-        <div class="sparkle" style="top: 75%; left: 82%;">👶🏻</div>
-        <div class="sparkle" style="top: 88%; left: 15%;">⋆</div>
-        <div class="sparkle" style="top: 40%; left: 92%;">🧵</div>
+<div class="container">
+
+  <!-- Header -->
+  <div class="card header">
+    <div class="shop-name">Lula (chxb.Lu)</div>
+    <div class="subtitle">☁️ Watermark Design Commission ☁️</div>
+    <div class="desc">รับออกแบบลายน้ำ</div>
+  </div>
+
+  <!-- ขั้นตอน -->
+  <div class="card">
+    <div class="section-title">📝 ขั้นตอนการสั่งงาน</div>
+
+    <div class="step-box">1️⃣ ทักแชทเพื่อแจ้งว่าต้องการลายน้ำแบบ YCH หรือ CMS</div>
+    <div class="step-box">2️⃣ ส่งรายละเอียดการบรีฟตามตัวอย่างด้านล่าง</div>
+    <div class="step-box">3️⃣ รอร้านสรุปแบบและแจ้งระยะเวลา (1-2 วัน/งาน)</div>
+  </div>
+
+  <!-- รายละเอียดบรีฟ -->
+  <div class="card">
+    <div class="section-title">📎 รายละเอียดการบรีฟงาน ลายน้ำ YCH & CMS</div>
+
+    <div class="image-box">
+      <img src="REPLACE_IMAGE_1_HERE">
+      <img src="REPLACE_IMAGE_2_HERE">
     </div>
 
-    <div class="container">
-        <header class="card">
-            <h1 class="shop-name">Lula (chxb.Lu)</h1>
-            <p class="shop-desc">รับออกแบบลายน้ำ</p>
-            <div class="status-badge">
-                <span class="dot"></span> สถานะ : เปิดรับงาน (Open)
-            </div>
-        </header>
-
-        <section class="card">
-            <h2><span class="badge">INFO</span> รายละเอียดการบรีฟงาน</h2>
-            <div class="img-grid">
-                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAYAAAB91L6VAAAACXBIWXMAAAsTAAALEwEAmpwYAAAgAElEQVR4nOydd3hURffHv/fubm..." alt="CMS Details">
-                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAYAAAB91L6VAAAACXBIWXMAAAsTAAALEwEAmpwYAAAgAElEQVR4nOydd3hURffHv/fubm..." alt="YCH Details">
-            </div>
-            <ul style="margin-top: 20px;">
-                <li><strong>CMS:</strong> ออกแบบ 'โอมากาเสะ' บรีฟของตกแต่งหรือแนวที่อยากให้วาดได้ (ถนัดแนวน่ารัก)</li>
-                <li><strong>YCH (V.1-8):</strong> แจ้งเวอร์ชันที่สนใจ กรณีเพิ่มของตกแต่งนอกเหนือจากแบบ +5 ฿ / ชิ้น</li>
-                <li><strong>รายละเอียดทั่วไป:</strong> ใส่ชื่อได้ทั้งไทย/อังกฤษ แจ้งการจัดวางตัวเล็ก-ใหญ่ได้</li>
-                <li><strong>โทนสี:</strong> สามารถแนบเรฟสีได้ หรือแจ้งการลงสี (ไล่สี / ระบายแยกสี)</li>
-            </ul>
-        </section>
-
-        <section class="card">
-            <h2><span class="badge">POLICY</span> เงื่อนไขบริการ</h2>
-            <ul>
-                <li>ระยะเวลาในการทำงาน 1-2 วัน/งาน</li>
-                <li>ลิขสิทธิ์งานเป็นของ Lula Shop ห้ามนำไปแอบอ้างหรือดัดแปลง</li>
-                <li>ผลงานทุกชิ้นมีเจ้าของ ขอบคุณที่สนับสนุนค่ะ</li>
-            </ul>
-        </section>
-
-        <a href="#" class="cta-btn">สั่งงาน / สอบถามที่นี่ 🧵</a>
-        
-        <footer>
-            <p>This is the work of Lula Shop. Do not claim or steal the work.</p>
-            <p>Wishing you happiness forever. ✿</p>
-        </footer>
+    <div style="font-size:14px;color:#547a97;">
+      กรุณาอ่านรายละเอียดในภาพให้ครบก่อนบรีฟงานนะคะ 💙
     </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="footer">
+    © Lula (chxb.Lu) — All rights reserved.
+  </div>
+
+</div>
 
 </body>
 </html>
